--- a/src/pages/onskeliste.astro
+++ b/src/pages/onskeliste.astro
@@ -2,9 +2,9 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 
 
-const pageTitle = "Home page"
+const pageTitle = "Ønskeliste"
 ---
 
 <BaseLayout title = {pageTitle}>
-
+    
 </BaseLayout>
