--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "Home page"
 ---
 <BaseLayout title = {pageTitle}>
-<section class="textblock">
+<div class="textblock">
 	<h2>Informasjon</h2>
 <p>
 	<strong>Tid og sted:</strong> Både vielsen og selskapet er på Torstad gård 29. juni 2024. Vielsen starter kl. 13:00, oppmøte senest kl. 12:50.
@@ -28,7 +28,7 @@ const pageTitle = "Home page"
 </p>
 <p> <strong>Bilder fra festen:</strong> Vi blir veldig glade for alle bilder som tas etter vielsen og utover bryllupsfesten. Vi kommer til å opprette deling av bildene på Google Foto etter bryllupet. Under vielsen ønsker vi å unngå for mange flotte fjes gjemt bak telefoner og ber dere derfor ikke ta bilder under vielsen da vi gir denne oppgaven til noen heldige utvalgte.</p>
 <p> <strong>Nyttige telefonnummer: </strong> Einar 934 10 910, Christiane 948 83 546, Erik (Einars forlover) 965 12 835, Eline (Christianes forlover) 458 81 242</p>
-</section>
+</div>
 
 </BaseLayout>
 
