800px madia screen justeringer

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ import emblem from '../images/einar-og-chris-emblem.jpg';
         max-width: fit-content;
         min-width: fit-content;
         height: 35vh; /* Make the container span the full height of the section */
-        max-height: 240px;
+        max-height: 30vh;
         position: relative; /* Positioning context for the image */
         background: green;
         object-fit:  cover;
@@ -37,13 +37,16 @@ import emblem from '../images/einar-og-chris-emblem.jpg';
     }
     div.nav-test{
         background: url(https://i.imgur.com/y1XdmZK.png);
-        background-size: 100%;
+        background-size: cover;
+        background-position: bottom left;
+        background-repeat: no-repeat;
         display: inline-block;
-        width: 75vw;
-        height: 35vh;
-        max-height: 240px;
+        width: 100%;
+        height: 30vh;
+        max-height: 30vh;
 
     }
+    
     div.and{
         font-size: 60px;
         width: 200px;
