--- a/src/pages/rsvp.astro
+++ b/src/pages/rsvp.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 
 
-const pageTitle = "RSVP"
+const pageTitle = "Svar her"
 ---
 
 <BaseLayout title = {pageTitle}>
