--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -8,32 +8,37 @@ import '../styles/global.css';
         justify-content: center;
         align-items: center;
         height: 100%;
+        text-decoration: none;
        
     }
-    .circle {
+    [class*="circle-"] {
         height: 10vh;
         width: 10vh;
+        object-fit: cover;
+        object-position: bottom-left;
         display: table-cell;
         text-align: center;
         font-size: 3.5vh;
         line-height: 1;
-        color: rgb(236, 239, 31);
+        color: #FDE481;
         vertical-align: middle;
         border-radius: 50%; /* may require vendor prefixes */
         background: #9f2b38;
+        text-decoration: none;
         
         }
+    
 </style>
 
 <nav>
 
     <a href="/rsvp/">
-        <div class = "circle">
-        RSVP
+        <div class = "circle-1">
+        Svar her
     </div>
     </a>
     <a href="/onskeliste/">
-        <div class = "circle">
+        <div class = "circle-2">
         Ønske -liste
     </div>
     </a>
