--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -2,16 +2,8 @@
 import '../styles/global.css';
 ---
 <style>
-    nav{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-        text-decoration: none;
-       
-    }
-    [class*="circle-"] {
+   
+    .circle{
         height: 10vh;
         width: 10vh;
         object-fit: cover;
@@ -30,15 +22,15 @@ import '../styles/global.css';
     
 </style>
 
-<nav>
+<nav class="flex flex-col h-full items-center justify-center gap-2">
 
     <a href="/rsvp/">
-        <div class = "circle-1">
+        <div class = "circle">
         Svar her
     </div>
     </a>
     <a href="/onskeliste/">
-        <div class = "circle-2">
+        <div class = "circle">
         Ønske -liste
     </div>
     </a>
