--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,12 +15,12 @@ import '../styles/global.css';
    
 </style>
 
-<header class="flex">
+<header class="flex flex-col gap-4  md:flex-row  bg">
 
     <div class="flex-shrink-0">
        <a href="/"> <img src= "https://i.imgur.com/hPLCUc2.jpg" class="img-emblem" alt="Emblem with the names Einar and Christiane"  /></a>
     </div>
-    <div class="w-full bg">
+    <div class="w-full mb-6">
         <Nav/>
     </div>
 </header>
