--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -22,7 +22,7 @@ import '../styles/global.css';
     
 </style>
 
-<nav class="flex flex-col h-full items-center justify-center gap-2">
+<nav class="flex flex-row md:flex-col h-full items-center justify-center gap-2">
 
     <a href="/rsvp/">
         <div class = "circle">
