--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,10 +4,10 @@ import '../styles/global.css';
 <style>
    
     .circle{
-        height: 10vh;
-        width: 10vh;
+        height: 12vh;
+        width: 12vh;
         object-fit: cover;
-        object-position: bottom-left;
+        object-position: bottom;
         display: table-cell;
         text-align: center;
         font-size: 3.5vh;
@@ -22,11 +22,11 @@ import '../styles/global.css';
     
 </style>
 
-<nav class="flex flex-row md:flex-col h-full items-center justify-center gap-2">
+<nav class="flex flex-row md:flex-col h-full items-center justify-center gap-20">
 
-    <a href="/rsvp/">
+    <a href="/info/">
         <div class = "circle">
-        Svar her
+        Infor -masjon
     </div>
     </a>
     <a href="/onskeliste/">
