--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -1,6 +1,13 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 
+
+const pageTitle = "Informasjon"
+---
+
+---
+import BaseLayout from '../layouts/BaseLayout.astro';
+
 const pageTitle = "GPTtest"
 
 ---
@@ -65,11 +72,6 @@ const pageTitle = "GPTtest"
       text-align: center;
       cursor: pointer;
     }
-
-    h2{
-        font-size: xx-large;
-        font-weight: 600;
-    }
     @media (min-width: 945px) {
         header {
             height: 30vh;
@@ -92,7 +94,6 @@ const pageTitle = "GPTtest"
     }
   </style>
 </head>
-
   <header>
     <img id="emblem" src="https://i.imgur.com/hJ30MCP.png" alt="Emblem">
     <div id="nav-background">
@@ -125,6 +126,32 @@ const pageTitle = "GPTtest"
 <p> <strong>Bilder fra festen:</strong> Vi blir veldig glade for alle bilder som tas etter vielsen og utover bryllupsfesten. Vi kommer til å opprette deling av bildene på Google Foto etter bryllupet. Under vielsen ønsker vi å unngå for mange flotte fjes gjemt bak telefoner og ber dere derfor ikke ta bilder under vielsen da vi gir denne oppgaven til noen heldige utvalgte.</p>
 <p> <strong>Nyttige telefonnummer: </strong> Einar 934 10 910, Christiane 948 83 546, Erik (Einars forlover) 965 12 835, Eline (Christianes forlover) 458 81 242</p>
 </div>
+
 </html>
 
+</BaseLayout>
+
+<BaseLayout title = {pageTitle}>
+    <div class="textblock">
+        <h2>Informasjon</h2>
+    <p>
+        <strong>Tid og sted:</strong> Både vielsen og selskapet er på Torstad gård 29. juni 2024. Vielsen starter kl. 13:00, oppmøte senest kl. 12:50.
+    </p>
+    
+    <p>
+        <strong>Hvordan komme seg dit:</strong> Det er en del parkering på gården og bilen kan stå til søndag. Det er også mulighet for kollektivtransport.
+    </p>
+    <p>
+        <strong>Tog:</strong> Lokaltog til Hvalstad stasjon, 15 min gange til lokalet
+    </p>
+    <p>
+        <strong> Buss:</strong> Hvalstad, Buss 270, 13 min gange til lokalet
+    </p>
+    <p> <strong>Taler:</strong> Håvard Vedeler Nilsen er toastmaster i bryllupet. Ta kontakt med ham dersom du vil holde tale i bryllupet.
+        haavard.v.n@gmail.com
+    </p>
+    <p> <strong>Bilder fra festen:</strong> Vi blir veldig glade for alle bilder som tas etter vielsen og utover bryllupsfesten. Vi kommer til å opprette deling av bildene på Google Foto etter bryllupet. Under vielsen ønsker vi å unngå for mange flotte fjes gjemt bak telefoner og ber dere derfor ikke ta bilder under vielsen da vi gir denne oppgaven til noen heldige utvalgte.</p>
+    <p> <strong>Nyttige telefonnummer: </strong> Einar 934 10 910, Christiane 948 83 546, Erik (Einars forlover) 965 12 835, Eline (Christianes forlover) 458 81 242</p>
+    </div>
+    
 </BaseLayout>
