font i info endret

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,6 +24,7 @@ p{
     max-width: 500px;
     margin: 0 auto;
     font-size: 18px;
+    font-family: 'EB Garamond', serif;
     padding: 10px;
     position: relative;
     text-align: center;
