--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -31,6 +31,11 @@ const pageTitle = "Informasjon"
 		haavard.v.n@gmail.com
 	</p>
 	<p> <strong>Bilder fra festen:</strong> Vi blir veldig glade for alle bilder som tas etter vielsen og utover bryllupsfesten. Vi kommer til å opprette deling av bildene på Google Foto etter bryllupet. Under vielsen ønsker vi å unngå for mange flotte fjes gjemt bak telefoner og ber dere derfor ikke ta bilder under vielsen da vi gir denne oppgaven til noen heldige utvalgte.</p>
+
+	<p>
+		<strong>Barn:</strong> Barn er dessverre ikke invitert til bryllupsmiddagen og -festen, men er hjertelig velkomne i vielsen.
+	</p>
+
 	<p> <strong>Nyttige telefonnummer: </strong> Einar 934 10 910, Christiane 948 83 546, Erik (Einars forlover) 965 12 835, Eline (Christianes forlover) 458 81 242</p>
 	</div>
 </BaseLayout>
