--- a/src/pages/onskeliste.astro
+++ b/src/pages/onskeliste.astro
@@ -4,7 +4,27 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 
 const pageTitle = "Ønskeliste"
 ---
+<style>
+    #text{
+        max-width: 90vw;
+        margin: 0 auto;
+        margin-top: 100px;
+        font-size: 23px;
+        font-family: 'EB Garamond', serif;
+        font-weight: 600;
+        padding: 10px;
+        position: relative;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+</style>
 
 <BaseLayout title = {pageTitle}>
-    <h1>KOMMER SNART</h1>
+    <div id="text">
+        <p>Ønskelisten kommer snart, vi må bare få skrevet den først. Vi sender en epost til dere når den er klar.</p>
+    </div>
+    
 </BaseLayout>
