--- a/src/pages/onskeliste.astro
+++ b/src/pages/onskeliste.astro
@@ -6,7 +6,7 @@ const pageTitle = "Ønskeliste"
 ---
 <style>
     #text{
-        max-width: 90vw;
+        max-width: 80vw;
         margin: 0 auto;
         margin-top: 100px;
         font-size: 23px;
@@ -20,11 +20,43 @@ const pageTitle = "Ønskeliste"
         align-items: center;
         justify-content: center;
     }
+a:link {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: purple;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: blue;
+  background-color: transparent;
+  text-decoration: underline;
+}
 </style>
 
 <BaseLayout title = {pageTitle}>
     <div id="text">
-        <p>Ønskelisten kommer snart, vi må bare få skrevet den først. Vi sender en epost til dere når den er klar.</p>
+        <p>Ønskelisten kan dere finne i denne lenken: 
+            <a href="https://www.minegavelister.no/463949">https://www.minegavelister.no/463949 </a>
+            
+        </p>
+        <p>&nbsp;</p>
+        <p>
+            
+            Under hvert ønske kan man kommentere. Dette er en fin måte å spleise på eller si i fra til andre at gaven er kjøpt. Vi, brudeparet, kan ikke se hva dere skriver. 
+        </p>
+
     </div>
     
 </BaseLayout>
