Audun epost og frist taler

--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -27,8 +27,9 @@ const pageTitle = "Informasjon"
 	<p>
 		<strong> Buss:</strong> Hvalstad, Buss 270, 13 min gange til lokalet
 	</p>
-	<p> <strong>Taler:</strong> Håvard Vedeler Nilsen er toastmaster i bryllupet. Ta kontakt med ham dersom du vil holde tale i bryllupet.
-		haavard.v.n@gmail.com
+	<p> <strong>Taler:</strong> Håvard Vedeler Nilsen er toastmaster i bryllupet. Ta kontakt med ham dersom du vil holde tale i bryllupet: <em>haavard.v.n@gmail.com</em>
+	<p><strong>Frist for innmeldelse av taler 3.juni</strong></p> 
+
 	</p>
 	<p> <strong>Bilder fra festen:</strong> Vi blir veldig glade for alle bilder som tas etter vielsen og utover bryllupsfesten. Vi kommer til å opprette deling av bildene på Google Foto etter bryllupet. Under vielsen ønsker vi å unngå for mange flotte fjes gjemt bak telefoner og ber dere derfor ikke ta bilder under vielsen da vi gir denne oppgaven til noen heldige utvalgte.</p>
 
