--- a/src/pages/onskeliste.astro
+++ b/src/pages/onskeliste.astro
@@ -11,7 +11,7 @@ const pageTitle = "Ønskeliste"
         margin-top: 100px;
         font-size: 23px;
         font-family: 'EB Garamond', serif;
-        font-weight: 600;
+        font-weight: 500;
         padding: 10px;
         position: relative;
         text-align: center;
@@ -55,6 +55,8 @@ a:active {
         <p>
             
             Under hvert ønske kan man kommentere. Dette er en fin måte å spleise på eller si i fra til andre at gaven er kjøpt. Vi, brudeparet, kan ikke se hva dere skriver. 
+        <p>&nbsp;</p>
+            Om det er spørsmål rundt gaver og ønskeliste kan de rettes til audun.hem@gmail.com
         </p>
 
     </div>
