audun epost i kursiv

--- a/src/pages/onskeliste.astro
+++ b/src/pages/onskeliste.astro
@@ -56,7 +56,7 @@ a:active {
             
             Under hvert ønske kan man kommentere. Dette er en fin måte å spleise på eller si i fra til andre at gaven er kjøpt. Vi, brudeparet, kan ikke se hva dere skriver. 
         <p>&nbsp;</p>
-            Om det er spørsmål rundt gaver og ønskeliste kan de rettes til audun.hem@gmail.com
+            Om det er spørsmål rundt gaver og ønskeliste kan de rettes til <i>audun.hem@gmail.com</i>
         </p>
 
     </div>
